--- a/game/package.json
+++ b/game/package.json
@@ -13,6 +13,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "sass-loader": "^7.0.3",
+    "socket.io-client": "^2.2.0",
     "style-loader": "^0.21.0"
   },
   "devDependencies": {
