--- a/game/package.json
+++ b/game/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.4.1",
     "sass-loader": "^7.0.3",
     "socket.io-client": "^2.2.0",
-    "style-loader": "^0.21.0"
+    "style-loader": "^0.21.0",
+    "three": "^0.115.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
