--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start" : "node ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf ./build && webpack --mode development"
   },
